# GramDrive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_DEPLOY.md  DOWNLOAD_OPTIMIZATION.md  Dockerfile  ENV_CONFIG.md  FIX_REDIRECT_LOOP.md  FIX_TOKEN_ISSUE.md  LICENSE  NGINX_CONFIG.md  QUICKSTART.md  README.en.md  README.md  README_EN.md  REBRANDING.md  RELEASE.md  WEB_CONFIG_FIX.md  deploy.bat  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  reset_config.py
.github/workflows/: docker-image.yml  release.yml
app/: bot_handler.py  database.py  events.py  main.py  pages.py  version.py  version_auto.py
app/api/: auth.py  common.py  downloads.py  files.py  routes.py  settings.py  sse.py  stats.py  tags.py  thumbnail.py  upload.py
app/core/: config.py  docker_utils.py  http_client.py  logging_config.py
app/services/: download_accelerator.py  download_service.py  telegram_service.py  thumbnail_service.py
app/static/: ui.css  ui.js
app/static/css/: style.css
app/static/js/: main.js  nav.js
app/templates/: about.html  base.html  downloads.html  guide.html  image_hosting.html  index.html  pwd.html  settings.html  stats.html  welcome.html
scripts/: test_downloads_api.py  test_stats_api.py
