[project]
name = "gramdrive"
version = "2.0.0"
description = "Gram Drive - A Telegram-based personal cloud storage service"
requires-python = ">=3.11"

[tool.ruff]
# 基本配置
line-length = 100
target-version = "py311"

# 包含的目录
include = ["app/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# 启用的规则
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# 忽略的规则（避免引入大量阻断级报错）
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "ARG001",  # unused function argument (for FastAPI dependencies)
    "ARG002",  # unused method argument (for FastAPI dependencies)
]

# 每行允许的注释数量
# max-comments-per-line = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进样式
indent-style = "space"

# 跳过魔术尾随逗号
skip-magic-trailing-comma = false

# 行尾样式
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''
